[package]
name = "tass"
description = "A pager for tabular data"
version = "0.9.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2021"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/tass"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
arrow = { version = "50", features = ["chrono-tz"] }
bpaf = { version = "0.9.11", features = ["derive"] }
chrono = "0.4.31"
chrono-tz = "0.8.4"
crossterm = "0.27.0"
datafusion = { version = "36.0.0", optional = true }
fileslice = { version = "0.4.0", default-features = false }
hsl = "0.1.1"
memchr = "2.6.4"
parquet = { version = "50", optional = true }
serde_json = { version = "1.0.107", optional = true }
tempfile = "3.8.1"
tokio = { version = "1.35.0", optional = true, features = ["rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["parquet"]
virt = ["datafusion", "tokio"]
json = ["serde_json"]
