[package]
name = "tass"
description = "A pager for tabular data"
version = "0.10.2"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2024"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/tass"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
arrow = { version = "54.2.1", features = ["chrono-tz"] }
bpaf = { version = "0.9.19", features = ["derive"] }
chrono = "0.4.39"
chrono-tz = "0.10"
color = "0.2.3"
crossterm = "0.28.1"
datafusion = { version = "46.0.0", optional = true }
fileslice = { version = "0.5", default-features = false }
memchr = "2.7.4"
parquet = { version = "54.2.1", optional = true }
tempfile = "3.19.0"
tokio = { version = "1.44", optional = true, features = ["rt", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["parquet", "csv", "json"]
virt = ["dep:datafusion", "dep:tokio"]
csv = []
json = []
parquet = ["dep:parquet"]
